<resources>
    <!-- clave de mapa -->
    <string name="google_maps_key">AIzaSyCuYHwH_F4qzlVLJYDJWIR5FZWS_eN5loA</string>


    <string name="app_name">FPTs</string>
    <string name="name_title">Fútbol Para Troncos</string>

    <string name="activity_comments">LEER COMENTARIOS </string>
    <string name="activity_comments_label">COMENTARIOS</string>
    <string name="activity_fields">VER CANCHAS</string>
    <string name="activity_fields_label">CANCHAS</string>
    <string name="activity_login">PANTALLA SESIÓN</string>
    <string name="activity_login_label">INICIAR SESIÓN</string>
    <string name="activity_maps_label">Map</string>
    <string name="activity_menu">MENÚ</string>
    <string name="activity_new_comment">OPINAR SOBRE UNA CANCHA</string>
    <string name="activity_new_comment_label">RESEÑAR</string>
    <string name="activity_new_reserves">HACER UNA NUEVA RESERVA</string>
    <string name="activity_new_reserves_label">RESERVAR</string>
    <string name="activity_register_user">REGISTRARSE</string>
    <string name="activity_register_user_label">REGISTRARSE</string>
    <string name="activity_reserves">VER RESERVACIONES HECHAS</string>
    <string name="activity_reserves_label">RESERVAS</string>
    <string name="activity_session">PANTALLA SESIÓN</string>
    <string name="activity_session_label">INICIAR SESIÓN</string>

    <!-- activity_comments_recycler -->
    <string-array name="spinnerSortComments">
        <item>MÁS NUEVOS</item>
        <item>MÁS VIEJOS</item>
        <item>MAYOR PUNTAJE</item>
        <item>MENOR PUNTAJE</item>
    </string-array>

    <!-- activity_fields_recycler -->
    <string name="lblOrder">Ordenar por:</string>
    <string-array name="spinnerSortFields">
        <item>MAYOR PUNTAJE</item>
        <item>MENOR PUNTAJE</item>
        <item>SEGÚN EL NOMBRE DE LA CANCHA</item>
        <item>MÁS CERCANO</item>
        <item>MÁS LEJANO</item>
    </string-array>

    <!-- activity_menu -->
    <string name="btnRegister">REGISTRARSE</string>
    <string name="lblWelcome">BIENVENIDOS!</string>

    <!-- activity_new_comment -->
    <string name="btnAddComment">Añadir reseña</string>
    <string name="checkBoxUploadImage">Imágen cargada</string>
    <string name="hintComment">Comentario...</string>
    <string name="lblCommentAsk">¿Tenés alguna opinión que quieras dar?</string>
    <string name="lblNewComment">DAR OPINIÓN</string>

    <string name="lblUploadPhotoAsk">¿Deseas subir una imágen de la cancha?</string>
    <string name="lblRatingAsk">¿Cómo es tu valoración de la cancha?</string>

    <string name="errorCamera">Permiso de cámara denegado</string>
    <string name="errorGallery">Permiso de galería denegado</string>
    <string name="errorUploading">Hubo un error al subir la imágen de la cancha</string>
    <string name="errorSaveComment">Hubo un error al guardar la reseña</string>
    <string name="successfulSaveComment">La reseña se ha hecho con éxito</string>


    <!-- activity_new_reserve -->
    <string name="lblFieldTittle">TituloField</string>
    <string name="lblLocation">Ubicación:</string>
    <string name="lblLocationValue">Ubicación 1080</string>
    <string name="lblCostTittle">Costo por hora:</string>
    <string name="lblChosenDate">Fecha elegida:</string>
    <string name="lblChosenDateValue">27/03/20</string>
    <string name="lblCostValue">costo valor</string>
    <string name="lblStartingTime">Hora de inicio:</string>
    <string name="lblFinishTime">Hora de finalización:</string>
    <string name="btnChoseDate">Elegir fecha</string>
    <string name="successfulSaveReserve">La reserve se ha hecho con éxito</string>

    <string-array name="spinnerStartingTime">
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
    </string-array>

    <!-- activity_new_user -->
    <string name="tittleNewUser">Crear Cuenta</string>
    <string name="confirmationPassHint">Confirmar contraseña</string>

    <!-- activity_session -->
    <string name="btnLogin">Iniciar sesión</string>
    <string name="hintTextEmail">Email</string>
    <string name="hintTextPass">Contraseña</string>
    <string name="hintUserName">Nombre de usuario</string>
    <string name="errorLogin">Revise el email o la contraseña</string>
    <string name="successfulLogin">Inicio de sesión exitoso</string>

    <!-- activity_register_user -->
    <string name="successfulRegister">Registración exitosa</string>
    <string name="errorRegister">Error en la registración</string>
    <string name="addingFakeData">Se agregaron reservas a su nombre</string>

    <!-- AppRepository -->
    <string name="failedOperation">Operación fallida!</string>
    <string name="noCommentsInDB">No hay comentarios acerca de la cancha. Se mostraran todos.</string>
    <string name="noFieldsInDB">No se encontraron canchas disponibles.</string>

    <!-- DialogPane -->
    <string name="should_rate">Debe puntuar la cancha</string>
    <string name="log_to_comment">Debe loguearse para poder comentar acerca de la cancha</string>
    <string name="log_to_reserve">Debe loguearse para poder hacer una reserva en la cancha</string>
    <string name="wish_to_log_for_comment">¿Desea loguearse para poder reseñar acerca de la cancha?</string>
    <string name="wish_to_log_for_reserve">¿Desea loguearse para poder reservar la cancha?</string>
    <string name="user_not_logged">Usuario no logueado</string>
    <string name="no">CANCELAR</string>
    <string name="yes">OK</string>

    <!-- Drawable menu -->
    <string name="header_reserves_user">RESERVAS ACTIVAS:</string>
    <string name="header_total_reserves">4</string>
    <string name="header_user_phone">TELÉFONO</string>
    <string name="header_username">NOMBRE DE USUARIO</string>
    <string name="menu_option_close_session">CERRAR SESIÓN</string>
    <string name="menu_option_fields">CANCHAS</string>
    <string name="menu_option_reserves">RESERVAS PROPIAS</string>
    <string name="menu_option_login">INICIAR SESIÓN</string>
    <string name="menu_option_register">REGISTRARSE</string>
    <string name="message_closing_session">CERRANDO SESIÓN</string>
    <string name="nav_drawer_open">ABRIR DRAW</string>
    <string name="nav_drawer_close">CERRAR DRAW</string>

    <!-- row_comment -->
    <string name="textCommentRow">His method adds unneeded complexity to view hierarchy. You will need two additional views (A layout container and the border view) to use his method. Thus if you have many views you need to add border to, your view tree will grow unmanagable.</string>
    <string name="lblTitleFieldRow">NOMBRE DE LA CANCHA</string>
    <string name="lblRatingFieldRow">5.0</string>
    <string name="lblDateCommentRow">27/12/2020</string>

    <!-- row_field -->
    <string name="btnReserve">RESERVAR</string>
    <string name="btnOpinions">OPINIONES</string>
    <string name="lblUsernameCommentRow">PISCULICHI</string>
    <string name="lblFieldCommentRow">@string/lblTitleFieldRow</string>
    <string name="title_activity_maps">Map</string>

    <!-- activity_new_reserve -->
    <string name="lblNameField">Cancha:</string>
    <string name="lblStateReserve">activa</string>
    <string name="lblDateReserve">Fecha:</string>
    <string name="lblPrice">Precio por hora:</string>
    <string name="lblPriceValue">$ 500</string>
    <string name="lblStartingTimeValue">17:00</string>
    <string name="lblFinishTimeValue">18:00</string>
    <string name="btnCancel">CANCELAR R.</string>
    <string name="btnHasUsed">USAR R.</string>
    <string name="btnReview">OPINAR</string>
</resources>