<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showInd="navigation_view">

    <group
        android:id="@+id/menu_all_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_option_session"
            android:icon="@mipmap/icon_session"
            android:title="@string/menu_option_session" />

        <item
            android:id="@+id/menu_option_fields"
            android:icon="@mipmap/icon_field_2"
            android:title="@string/menu_option_fields" />

        <item
            android:id="@+id/menu_option_reserves"
            android:icon="@mipmap/icon_reserve"
            android:iconTint="#32592F"
            android:title="@string/menu_option_reserves" />

        <item
            android:id="@+id/menu_option_close_session"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_option_close_session" />

    </group>
</menu>