<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewComment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/bigger_padding_container"
    android:orientation="vertical"
    android:padding="@dimen/bigger_padding_container"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/lblNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/bigger_padding_container"
            android:text="@string/name_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblStateReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/bigger_padding_container"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/colorPrimary"
            android:padding="@dimen/padding_container"
            android:text="@string/lblStateReserve"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/lblNameField"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <TextView
            android:id="@+id/lblDateReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigger_padding_container"
            android:text="@string/lblDateReserve"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/lblDateReserveValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <TextView
            android:id="@+id/lblDateReserveValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_container"
            android:layout_marginEnd="@dimen/bigger_padding_container"
            android:text="@string/lblDateCommentRow"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/lblPrice"
            app:layout_constraintStart_toEndOf="@id/lblDateReserve"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />


        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigger_padding_container"
            android:layout_marginEnd="@dimen/bigger_padding_container"
            android:text="@string/lblPrice"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/lblPriceValue"
            app:layout_constraintStart_toEndOf="@id/lblDateReserveValue"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <TextView
            android:id="@+id/lblPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_container"
            android:text="@string/lblPriceValue"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/lblPrice"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <TextView
            android:id="@+id/lblStartingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigger_padding_container"
            android:text="@string/lblStartingTime"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@id/lblStartingTimeValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <TextView
            android:id="@+id/lblStartingTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_container"
            android:layout_marginEnd="@dimen/bigger_padding_container"
            android:text="@string/lblStartingTimeValue"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@id/lblFinishTime"
            app:layout_constraintStart_toEndOf="@id/lblStartingTime"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_goneMarginEnd="@dimen/bigger_padding_container" />

        <TextView
            android:id="@+id/lblFinishTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigger_padding_container"
            android:layout_marginEnd="@dimen/bigger_padding_container"
            android:text="@string/lblFinishTime"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@id/lblFinishTimeValue"
            app:layout_constraintStart_toEndOf="@id/lblStartingTimeValue"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <TextView
            android:id="@+id/lblFinishTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_container"
            android:text="@string/lblFinishTimeValue"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/lblFinishTime"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.54" />

        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigger_padding_container"
            android:text="@string/lblLocation"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintEnd_toStartOf="@id/lblLocationValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline3" />

        <TextView
            android:id="@+id/lblLocationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_container"
            android:text="@string/lblLocationValue"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintStart_toEndOf="@id/lblLocation"
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            app:layout_goneMarginEnd="@dimen/bigger_padding_container" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.76" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnReview"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <Button
            android:id="@+id/btnReview"
            style="@style/ButtonStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>