<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160sp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/bigger_padding_container">

    <TextView
        android:id="@+id/header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/header_username"
        android:textColor="@color/fontColorLight"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_container" />

    <TextView
        android:id="@+id/header_user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_user_phone"
        android:textColor="@color/fontColorLight"
        android:textSize="15sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_container" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/header_reserves_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_reserves_user"
            android:textColor="@color/fontColorLight"
            android:textSize="15sp" />

        <Space
            android:layout_width="@dimen/padding_container"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/header_total_reserves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_total_reserves"
            android:textColor="@color/fontColorLight"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>