<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_container"
    android:paddingVertical="@dimen/padding_container"
    tools:context=".activity.ActivitySession">

    <TextView
        android:id="@+id/lblFTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textSize="@dimen/size_title" />

    <ImageView
        android:id="@+id/imageBall"
        android:layout_width="217dp"
        android:layout_height="339dp"
        android:src="@mipmap/icon_football_ball" />

    <EditText
        android:id="@+id/textUsername"
        style="@style/EditTextStyle"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintNameUser"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space" />

    <EditText
        android:id="@+id/textPassword"
        style="@style/EditTextStyle"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintTextPass"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#367C37"
        android:backgroundTintMode="src_over"
        android:text="@string/btnLogin"
        android:theme="@style/ButtonStyle" />
</LinearLayout>