<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ActivityMain"
    tools:openDrawer="end">
    <!--tools:openDrawer="start"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/navigator_toolbar" />

        <LinearLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_container"
            tools:context=".activity.ActivityLogin">

            <TextView
                android:id="@+id/lblRegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittleNewUser"
                android:textSize="@dimen/size_sub_subtitle" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <EditText
                android:id="@+id/textUserName"
                style="@style/EditTextStyle"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintUserName"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <EditText
                android:id="@+id/textEmail"
                style="@style/EditTextStyle"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fui_email_hint"
                android:inputType="textPersonName|textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <EditText
                android:id="@+id/textPassword"
                style="@style/EditTextStyle"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintTextPass"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <EditText
                android:id="@+id/textPasswordConfirmation"
                style="@style/EditTextStyle"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/confirmationPassHint"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <Button
                android:id="@+id/btnRegisterUser"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <ProgressBar
                android:id="@+id/progressBarRegister"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />


        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/navigation_view" />

</androidx.drawerlayout.widget.DrawerLayout>