<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/bigger_padding_container"
    android:background="@color/colorOnSecondary"
    android:padding="@dimen/bigger_padding_container">

    <TextView
        android:id="@+id/lblTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_container"
        android:layout_marginTop="@dimen/padding_container"
        android:layout_marginEnd="@dimen/padding_container"
        android:layout_marginBottom="@dimen/padding_container"
        android:text="@string/user_not_logged"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblMessageDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblMessageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_container"
        android:layout_marginTop="@dimen/padding_container"
        android:layout_marginEnd="@dimen/padding_container"
        android:layout_marginBottom="@dimen/padding_container"
        android:text="@string/wish_to_log_for_comment"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitleDialog" />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_container"
        android:layout_marginTop="@dimen/padding_container"
        android:layout_marginEnd="@dimen/padding_container"
        android:layout_marginBottom="@dimen/padding_container"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/yes"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblMessageDialog" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_container"
        android:layout_marginTop="@dimen/padding_container"
        android:layout_marginEnd="@dimen/padding_container"
        android:layout_marginBottom="@dimen/padding_container"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/no"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnYes"
        app:layout_constraintTop_toBottomOf="@id/lblMessageDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>